@@ -1,5 +1,7 @@
-2011-08-27  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2011-09-01  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* gdbmi.py: Fix no breakpoint signs after setting a 'throw'
+	catchpoint.
 	* buffer.py debugger.py netbeans.py simple.py: Fix after starting a
 	new gdb session, breakpoint signs may be placed in the wrong files.
 
